# rendeirolab.github.io

./: .gitignore  CNAME  Makefile  README.md  _index.html  _publications.html  _research.html  _team.html  _template.html  build.py  config.yaml  contact  contact.html  content.yaml  index  index.html  news  news.html  publications  publications.html  pyproject.toml  requirements.txt  research  research.html  robots.txt  sitemap.xml  team  team.html
.github/workflows/: deploy.yml
art/: index.html
assets/css/: style.css
assets/img/: convert.sh
assets/js/: color_toggler.js  tab_history.js
contact/: index.html
content/: art.yaml  contact.yaml  cool_papers.yaml  index.yaml  manual.yaml  news.yaml  press.yaml  publications.yaml  research.yaml  software.yaml  team.yaml
content/posts/: 2025_a_year_in_review.md  cool-papers-sharing.md  lazyslide-behind-the-scenes.md
cool-papers/: README.md  enrich_papers.py  extract_papers.py  feed.xml  index.html  insights.html  insights.py  news_insights.py  papers.csv  year-2022.html  year-2023.html  year-2024.html  year-2025.html  year-2026.html
cool-papers/insights/: paper_topics.csv  topic_growth.csv  topic_trends.csv
cool-papers/news_insights/: news_growth.csv  news_topics.csv  news_trends.csv
docs/: contact.html  index.html  news.html  publications.html  research.html  team.html
lab-manual/: index.html
lab-manual/CHANGELOG/: index.html
lab-manual/changelog/: index.html
lab-manual/code_of_conduct/: index.html
lab-manual/communication_and_meetings/: index.html
lab-manual/getting_started/: index.html
lab-manual/infrastructure/: index.html
lab-manual/learning/: index.html
lab-manual/manuscript_writing/: index.html
lab-manual/mission_statement/: index.html
lab-manual/offboarding/: index.html
lab-manual/project_planning/: index.html
lab-manual/record_keeping/: index.html
lab-manual/research/: index.html
manual/: index.html
manual/changelog/: index.html
manual/code_of_conduct/: index.html
manual/communication_and_meetings/: index.html
manual/getting_started/: index.html
manual/infrastructure/: index.html
manual/learning/: index.html
manual/manuscript_writing/: index.html
manual/mission_statement/: index.html
manual/offboarding/: index.html
manual/project_planning/: index.html
manual/record_keeping/: index.html
manual/research/: index.html
news/: feed.xml  index.html  insights.html  year-2022.html  year-2023.html  year-2024.html  year-2025.html  year-2026.html
p/: index.html
p/2025_a_year_in_review/: index.html
p/cool-papers-sharing/: index.html
p/lazyslide-behind-the-scenes/: index.html
press/: index.html
publications/: index.html
research/: index.html
software/: index.html
team/: index.html
templates/: _cool_papers_insights.html  _cool_papers_year.html  _news_insights.html  _news_year.html  _template.html  art.html  contact.html  cool_papers.html  index.html  manual.html  news.html  post.html  posts_index.html  press.html  publications.html  research.html  software.html  team.html  template.html
