[project]
name = "rendeirolab-github-io"
version = "0.1.0"
description = "A simple, templated website for the Rendeiro Lab."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "jinja2>=3.1.5",
    "livereload>=2.7.1",
    "markdown2[all]>=2.5.3",
    "pyaml>=25.1.0",
    "pygments>=2.19.1",
    "requests>=2.32.3",
]
keywords = ["website", "jinja", "yaml", "bootstrap"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://rendeiro.group/" }
authors = [
    { name = "Andre Rendeiro", email = "arendeiro@cemm.oeaw.ac.at" },
]

[tool.taskipy.tasks]
clean = { cmd = "rm -r docs || true", help = "Remove the 'docs' directory" }
build = { cmd = "python build.py", help = "Run the build script" }
serve = { cmd = "python build.py --serve", help = "Dev server with live reload" }

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
