[project]
name = "rendeirolab-github-io"
version = "0.1.0"
description = "A simple, templated website for the Rendeiro Lab."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "jinja2>=3.1.5",
    "livereload>=2.7.1",
    "markdown2[all]>=2.5.3",
    "pyaml>=25.1.0",
    "pygments>=2.19.1",
    "requests>=2.32.3",
]
keywords = ["website", "jinja", "yaml", "bootstrap"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://rendeiro.group/" }
authors = [
    { name = "Andre Rendeiro", email = "arendeiro@cemm.oeaw.ac.at" },
]

[tool.taskipy.tasks]
clean = { cmd = "rm -r docs || true", help = "Remove the 'docs' directory" }
build = { cmd = "uv run build.py", help = "Run the build script" }
serve = { cmd = "uv run build.py --serve", help = "Dev server with live reload" }
check = { cmd = "gh run list --repo rendeirolab/rendeirolab.github.io --workflow deploy.yml --limit 5 --json conclusion,headBranch,createdAt,displayTitle --template '{{range .}}{{tablerow (timeago .createdAt) .headBranch (printf \"%-.35s\" .displayTitle) .conclusion }}{{end}}'", help = "Check latest deployment statuses" }
collect-papers = { cmd = "uv run cool-papers/extract_papers.py && uv run cool-papers/enrich_papers.py", help = "Extract new papers from mailbox and enrich with DOI/journal" }
pre_insights = { cmd = "uv run task collect-papers", help = "Extract and enrich papers before regenerating insights" }
insights = { cmd = "uv run cool-papers/insights.py && uv run cool-papers/news_insights.py", help = "Regenerate all topic insights and plots (cool papers + news)" }
insights-cool-papers = { cmd = "uv run cool-papers/insights.py", help = "Regenerate cool papers topic insights and plots" }
insights-news = { cmd = "uv run cool-papers/news_insights.py", help = "Regenerate news topic insights and plots" }

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
